# NodeGPT

./: .gitignore  AutoUpdate.json  Autogen.py  Chat.py  Conditioning.py  DisplayText.py  DisplayTextAsImage.py  EVAL.py  Groupchat.py  LICENSE  LoadAPIconfig.py  LoadTXT.py  Output2String.py  README.md  TextGeneration.py  TextOutput.py  Textnode.py  Update.bat  __init__.py  config.py  install.bat  llava.py  pyproject.toml  requirements.txt  update.py
API_Configs/: OpenAI.txt
API_Nodes/: ChatGPT.py  LM_Studio.py  Ollama.py  llama-cpp.py  oobaboogaOpenAI.py
Agents/: AppendAgent.py  Assistant.py  Critic.py  Engineer.py  Executor.py  Planner.py  Scientist.py  UserProxy.py
NotWorkingNodes/: MemGPT.py
Old/: Textnode.py
Workflow/: GroupChat.json  GroupChat2.json  SimplePromptEnhancer.json  Task_Solving_with_Code_Generation.json  Task_Solving_with_Code_Generation_1.json  Task_Solving_with_Code_Generation_2.json  llama-cpp.json
